# IOT-Inverter

./: CMakeLists.txt  README.md  inv_conf.cpp  inv_conf.h  inv_data.cpp  inv_data.h  inv_db.cpp  inv_db.h  inverter.cpp  inverter.h  main.cpp  simdev.cpp
common/: common.cpp  common.h  db_base.cpp  db_base.h  network.cpp  network.h
docs/: solar.conf
include/modbus/: modbus-goodwe.h  modbus.h
lib/modbus/: modbus-goodwe-private.h  modbus-goodwe.c  modbus-kaco-private.h  modbus-kaco.c  modbus-kaco.h  modbus-private.h  modbus.c
